--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,17 +1,53 @@
-name: Test PowerShell on Ubuntu
-on: push
+# This is a basic workflow to help you get started with GitHub Actions
 
+name: Getting Started
+
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the main branch
+on:
+  push:
+    branches: [ change-to-main ]
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  pester-test:
-    name: Pester test
-    runs-on: ubuntu-latest
+  # The first job in this workflow is named build-on-windows
+  build-on-windows:
+    # The type of runner that the job will run on
+    runs-on: windows-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - name: Perform a Pester test from the command-line
-        shell: pwsh
-        run: Test-Path resultsfile.log | Should -Be $true
-      - name: Perform a Pester test from the Tests.ps1 file
-        shell: pwsh
-        run: |
-          Invoke-Pester Unit.Tests.ps1 -Passthru
+      - uses: actions/checkout@v2 
+
+      - name: Run single line script
+        run:  sh ./script.sh
+        
+      - name: Multiline sscript
+        run: echo Here is what is in the folder
+             ls-a
+      
+          
+#   # This second job in this workflow is named build-on-ubnutu
+#   build-on-ubuntu:
+#     # The type of runner that the job will run on
+#     runs-on: ubuntu-latest
+
+#     # Steps represent a sequence of tasks that will be executed as part of the job
+#     steps:
+
+#       - name: Step 1 - Log the pre-build disc space
+#         run: ls
+        
+#       - name: step 2 - Checkout the main GitHub branch
+#         uses: actions/checkout@v2 
+        
+#       - name: Step 3 - Set up JDK 1.8
+#         uses: actions/setup-java@v1
+#         with: 
+#           java-version: 1.8
+
+#       - name: Step 4 - Build your your Jakarta web app with Maven
+#         run: echo mvn -B package --file pom.xml
+          
+#       - name: Step 5 - List Ubuntu Environment Variables
+#         run: env
