--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,3 +20,16 @@ jobs:
         run: |
           Set-PSRepository PSGallery -InstallationPolicy Trusted
           Install-Module SqlServer, PSScriptAnalyzer  
+      
+      - name: Setup PowerShell module cache
+        id: cacher
+        uses: actions/cache@v3
+        with:
+             path: "~/.local/share/powershell/Modules"
+             key: ${{ runner.os }}-SqlServer-PSScriptAnalyzer
+      - name: Install required PowerShell modules
+        if: steps.cacher.outputs.cache-hit != 'true'
+        shell: pwsh
+        run: |
+         Set-PSRepository PSGallery -InstallationPolicy Trusted
+         Install-Module SqlServer, PSScriptAnalyzer -ErrorAction Stop          
