--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,13 @@ jobs:
         shell: pwsh
         run: |
          Set-PSRepository PSGallery -InstallationPolicy Trusted
-         Install-Module SqlServer, PSScriptAnalyzer -ErrorAction Stop          
+         Install-Module SqlServer, PSScriptAnalyzer -ErrorAction Stop
+         
+      
+      - name: Build and publish
+        env:
+          NUGET_KEY: ${{ secrets.NUGET_KEY }}
+        shell: pwsh
+        run: |
+          ./build.ps1 -Path /tmp/samplemodule
+          Publish-Module -Path /tmp/samplemodule -NuGetApiKey $env:NUGET_KEY -Verbose
