--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,10 +35,6 @@ jobs:
          Install-Module SqlServer, PSScriptAnalyzer -ErrorAction Stop
          
       
-      - name: Build and publish
-        env:
-          NUGET_KEY: ${{ secrets.NUGET_KEY }}
-        shell: pwsh
-        run: |
-          ./build.ps1 -Path /tmp/samplemodule
-          Publish-Module -Path /tmp/samplemodule -NuGetApiKey $env:NUGET_KEY -Verbose
+      - name: Gethelp
+         run:|
+             ./build.ps1
